tests/out/error/struct/cannot_assign.in.bt
struct Foo{
	x i32
	y i32
}

_ := Foo{
	x = nofun()
	y = "hi"
}
